--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "popups": "^1.1.3",
+    "razorpay": "^2.8.3",
     "stripe": "^8.129.0"
   }
 }
